@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: unixInit.test,v 1.22 2001/08/24 14:59:20 dgp Exp $
+# RCS: @(#) $Id: unixInit.test,v 1.23 2001/08/27 02:14:08 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -139,11 +139,7 @@ test unixInit-2.1 {TclpInitLibraryPath: value of installLib, developLib} \
     set path [getlibpath]
 
     set installLib lib/tcl[info tclversion]
-    if {[string match {*[ab]*} [info patchlevel]]} {
-	set developLib tcl[info patchlevel]/library
-    } else {
-        set developLib tcl[info tclversion]/library
-    }
+    set developLib tcl[info patchlevel]/library
     set prefix [file dirname [file dirname $::tcltest::tcltest]]
 
     set x {}
@@ -269,9 +265,7 @@ test unixInit-2.9 {TclpInitLibraryPath: paths relative to executable} {
     file delete -force /tmp/library
     set x
 } [list /tmp/lib/tcl[info tclversion] /lib/tcl[info tclversion] \
-        /tmp/library /library [format /tcl%s/library \
-        [expr {[regexp {[ab]} [info patchlevel]] ?
-        [info patchleve] : [info tclversion]}]]]
+        /tmp/library /library /tcl[info patchlevel]/library]
 test unixInit-3.1 {TclpSetInitialEncodings} {unixOnly installedTcl} {
     set env(LANG) C
 
